# image_convolution

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
